animaliads no site

--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
+    "@animaliads/ani-button": "^1.0.0-next.1",
+    "@animaliads/css-tokens": "^1.0.0-next.1",
+    "@animaliads/po-ui-brand": "^1.0.0-next.1",
     "@docusaurus/core": "2.0.0-beta.0",
     "@docusaurus/preset-classic": "2.0.0-beta.0",
     "@mdx-js/react": "^1.6.21",
