--- a/package.json
+++ b/package.json
@@ -21,8 +21,6 @@
     "@docusaurus/preset-classic": "2.0.0-beta.0",
     "@mdx-js/react": "^1.6.21",
     "@svgr/webpack": "^5.5.0",
-    "@webcomponents/custom-elements": "^1.4.3",
-    "@webcomponents/webcomponentsjs": "^2.5.0",
     "clsx": "^1.1.1",
     "file-loader": "^6.2.0",
     "react": "^17.0.1",
@@ -40,5 +38,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-react-jsx-self": "^7.12.13",
+    "@docusaurus/module-type-aliases": "^2.0.0-beta.0",
+    "@tsconfig/docusaurus": "^1.0.2",
+    "@types/react": "^17.0.6",
+    "@types/react-helmet": "^6.1.1",
+    "@types/react-router-dom": "^5.1.7",
+    "@webcomponents/custom-elements": "^1.4.3",
+    "typescript": "^4.2.4"
   }
 }
