--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@animaliads/css-tokens": "^1.0.0-next.1",
     "@animaliads/po-ui-brand": "^1.0.0-next.1",
     "@docusaurus/core": "2.0.0-beta.0",
+    "@docusaurus/plugin-google-analytics": "^2.0.0-beta.21",
+    "@docusaurus/plugin-google-gtag": "^2.0.0-beta.21",
     "@docusaurus/preset-classic": "2.0.0-beta.0",
     "@mdx-js/react": "^1.6.21",
     "@svgr/webpack": "^5.5.0",
     "clsx": "^1.1.1",
+    "docusaurus-plugin-hotjar": "^0.0.2",
     "file-loader": "^6.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
